start on documentation

--- a/bfim/src/com/fincher/bfim/jsp/bfim_jsp_doc.html
+++ b/bfim/src/com/fincher/bfim/jsp/bfim_jsp_doc.html
@@ -11,6 +11,8 @@
 		<br><a href="html_gen/index.jsp.html">index.jsp</a>
 		<br><a href="html_gen/BfimBean.java.html">BfimBean.java.</a>
 		<br><a href="html_gen/Entries.java.html">Entries.java.</a>
+		<br><a href="html_gen/DateUtil.java.html">DateUtil.java.</a>
+		<br><a href="html_gen/SandPEntry.java.html">SandPEntry.java.</a>
 	</center>
 </body>
 </html>
